refactor: Spring Boot 3.x best practices
Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.java.spring.boot3.SpringBoot3BestPractices?organizationId=R29vZ2xl

Co-authored-by: Moderne <team@moderne.io>